[project]
dependencies = [
    "cycler",
    "matplotlib",
    "mne",
    "numpy",
    "pandas",
    # "pyperceive@git+https://github.com/richardkoehler/PyPerceive.git@beta_profile",
    "pyperceive@git+https://github.com/jgvhabets/PyPerceive.git@dev_Jenny",
    "scipy",
]
name = "beta_profile"
version = "0.1.0-alpha.1"
description = "Subthalamic beta profile of Parkinson's patients with sensing-enabled DBS devices and directional DBS leads."
authors = [{ name = "Jennifer Kim Behnke" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = ["ipykernel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beta_profile"]
